--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
         <div class="left-panel">
             <div class="floating-hearts" id="hearts-container"></div>
             <div class="photo-container">
-                <div class= "">
-                    <i class="fas fa-user"></i>
+                <div class= "photo-placeholder">
+                    <i class="C:\Users\Milson\Desktop\''MCN890''\Mira\WhatsApp Image 2025-10-25 at 12.54.15 PM.jpg"></i>
                 </div>
             </div>
             <h1>Palmira ❤️</h1>
@@ -501,4 +501,5 @@
         });
     </script>
 </body>
+
 </html>
